finalisation du site complet

--- a/comparatif.html
+++ b/comparatif.html
@@ -276,6 +276,68 @@
           <div class="bar-value">1,1 g</div>
         </div>
       </div>
+
+      <!-- Taille HTML -->
+      <div class="card">
+        <h3>💾 Taille HTML</h3>
+        <div class="bar-line">
+          <div class="bar-label">IDEvent</div>
+          <div class="bar-visual"><span class="bar-unit green"></span></div>
+          <div class="bar-value">10 Ko</div>
+        </div>
+        <div class="bar-line">
+          <div class="bar-label">HelloAsso</div>
+          <div class="bar-visual">
+            <span class="bar-unit red"></span><span class="bar-unit red"></span><span class="bar-unit red"></span>
+          </div>
+          <div class="bar-value">80 Ko</div>
+        </div>
+      </div>
+
+      <!-- JS Libraries -->
+      <div class="card">
+        <h3>🧩 Librairies JS</h3>
+        <div class="bar-line">
+          <div class="bar-label">IDEvent</div>
+          <div class="bar-visual"><span class="bar-unit green"></span></div>
+          <div class="bar-value">Aucune</div>
+        </div>
+        <div class="bar-line">
+          <div class="bar-label">HelloAsso</div>
+          <div class="bar-visual"><span class="bar-unit red"></span><span class="bar-unit red"></span></div>
+          <div class="bar-value">jQuery, React</div>
+        </div>
+      </div>
+
+      <!-- Dépendances -->
+      <div class="card">
+        <h3>🔧 Dépendances externes</h3>
+        <div class="bar-line">
+          <div class="bar-label">IDEvent</div>
+          <div class="bar-visual"><span class="bar-unit green"></span></div>
+          <div class="bar-value">0</div>
+        </div>
+        <div class="bar-line">
+          <div class="bar-label">HelloAsso</div>
+          <div class="bar-visual"><span class="bar-unit red"></span><span class="bar-unit red"></span><span class="bar-unit red"></span></div>
+          <div class="bar-value">5–10</div>
+        </div>
+      </div>
+
+      <!-- Cookies -->
+      <div class="card">
+        <h3>🍪 Cookies & consentement</h3>
+        <div class="bar-line">
+          <div class="bar-label">IDEvent</div>
+          <div class="bar-visual"><span class="bar-unit green"></span></div>
+          <div class="bar-value">Aucun</div>
+        </div>
+        <div class="bar-line">
+          <div class="bar-label">HelloAsso</div>
+          <div class="bar-visual"><span class="bar-unit red"></span><span class="bar-unit red"></span><span class="bar-unit red"></span></div>
+          <div class="bar-value">Présents</div>
+        </div>
+      </div>
     </div>
 
     <p class="conclusion">
