--- a/comparatif.html
+++ b/comparatif.html
@@ -195,9 +195,13 @@
     <h1>Comparatif chiffré</h1>
 
     <p class="intro">
-      Nous avons comparé notre page vitrine avec une page événementielle classique (HelloAsso – catégorie sport).
-      L'objectif : montrer qu'on peut informer efficacement avec 10x moins de ressources.
+    Nous avons comparé notre page vitrine avec une page événementielle classique : 
+    <a href="https://www.helloasso.com/e/cat/sport" target="_blank" rel="noopener noreferrer">
+        HelloAsso – Événements Sport
+    </a>.<br>
+    L'objectif : montrer qu'on peut informer efficacement avec 10x moins de ressources.
     </p>
+
 
     <div class="grid">
       <!-- Temps de chargement -->
