--- a/contact.html
+++ b/contact.html
@@ -142,8 +142,8 @@
   </header>
 
   <main>
-    <h1>📫 Contact</h1>
-    <img src="images/diversite_logo.webp" alt="Logo vert IDEvent" style="width: 60px; display: block; margin: 1rem auto;" />
+ 
+    <img src="images/logo_efrei.png" alt="Logo vert IDEvent" style="width: 200px; display: block; margin: 1rem auto;" />
 
     <div class="contact-list">
       <p>Pour toute question concernant le projet IDEvent, vous pouvez nous écrire :</p>
