--- a/green-it-impact.html
+++ b/green-it-impact.html
@@ -135,7 +135,7 @@
   <header>
     <div class="nav-container">
       <div class="logo">
-        <img src="images/logo.ico" alt="Logo IDEvent" />
+        <img src="images/logo_efrei.png" alt="Logo Efrei" />
         <span>IDEvent</span>
       </div>
       <nav aria-label="Navigation principale">
@@ -168,13 +168,28 @@
       <li><strong>Code minimaliste :</strong> HTML + CSS uniquement, sans JavaScript</li>
     </ul>
 
-    <h2>🛠️ Outils & méthodes</h2>
+    <h2>🔍 Outils utilisés pour évaluer notre site</h2>
+    <p>
+    Pour évaluer les performances techniques et l’impact écologique de notre site, nous avons utilisé les outils suivants :
+    </p>
     <ul>
-      <li>GTMetrix – performance et éco-score</li>
-      <li>WebsiteCarbon.com – estimation CO₂ par page</li>
-      <li>Ecograder – bonnes pratiques green web</li>
-      <li>Analyse manuelle : poids, requêtes, design mobile</li>
+    <li>
+        <a href="https://www.websitecarbon.com/" target="_blank" rel="noopener noreferrer">
+        🌱 Website Carbon Calculator
+        </a> – Estimation de l'empreinte carbone d’une page web.
+    </li>
+    <li>
+        <a href="https://ecograder.com/" target="_blank" rel="noopener noreferrer">
+        ♻️ EcoGrader
+        </a> – Analyse de la durabilité et des bonnes pratiques web.
+    </li>
+    <li>
+        <a href="https://gtmetrix.com/" target="_blank" rel="noopener noreferrer">
+        ⚡ GTMetrix
+        </a> – Détails sur le temps de chargement, les requêtes, le poids des pages.
+    </li>
     </ul>
+
 
     <div class="quote">
       “Un site éco-conçu peut diviser son impact par 10 tout en restant informatif, rapide et esthétique.”
