--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Site démonstrateur Green IT et Low Web pour IDEvent."/>
+  <meta name="description" content="Accueil du projet IDEvent – démonstrateur web sobre (Low Web vs site classique)"/>
   <title>IDEvent – Accueil</title>
   <style>
     body {
@@ -188,11 +188,14 @@
 
   <main class="home-content">
     <h1>Bienvenue sur IDEvent</h1>
-    <h2>Un projet démonstrateur de sobriété numérique</h2>
-    <p>Ce site a été conçu pour <span class="highlight-green">démontrer concrètement</span>
-      les bénéfices d’un développement web sobre et responsable. Nous comparons une version classique d’un site vitrine avec une version optimisée selon les principes du <strong>Low Web</strong> et du <strong>Green IT</strong>.
+    <h2>Un démonstrateur de sobriété numérique et de performance</h2>
+    <p>
+      Ce site présente un <span class="highlight-green">prototype éco-conçu</span> développé
+      dans le but de <strong>comparer</strong> un site événementiel classique avec une version <strong>Low Web</strong>,
+      plus sobre, plus rapide et plus respectueuse de l’environnement.
     </p>
-    <a href="comparatif.html" class="button">Voir les résultats comparatifs</a>
+    <a href="site-vitrine.html" class="button">Voir le site vitrine</a>
+    <a href="comparatif.html" class="button-secondary">Voir les résultats comparatifs</a>
     <a href="green-it-impact.html" class="button-secondary">Notre démarche</a>
   </main>
 
