--- a/site-vitrine.html
+++ b/site-vitrine.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Exemple de site vitrine culturel éco-conçu"/>
   <title>IDEvent – Site vitrine</title>
   <style>
+    /* ✅ Styles conservés comme tu les avais */
     body {
       font-family: system-ui, sans-serif;
       margin: 0;
@@ -79,9 +80,20 @@
       margin: 1rem 0 2rem;
     }
 
-    .filters span {
-      margin: 0 0.5rem;
+    .filters button {
+      margin: 0.2rem;
+      padding: 0.4rem 0.8rem;
+      border: none;
+      border-radius: 5px;
+      background-color: #e0f2e9;
+      color: #145a32;
+      cursor: pointer;
       font-weight: bold;
+    }
+
+    .filters button.active {
+      background-color: #27ae60;
+      color: white;
     }
 
     .event-grid {
@@ -133,6 +145,21 @@
       text-decoration: underline;
     }
 
+    .load-more-container {
+      text-align: center;
+      margin-top: 1rem;
+    }
+
+    .load-more-container button {
+      background-color: #27ae60;
+      color: white;
+      border: none;
+      padding: 0.6rem 1.2rem;
+      border-radius: 6px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
     footer {
       background-color: #f4f4f4;
       text-align: center;
@@ -165,6 +192,7 @@
           <li><a href="comparatif.html">Comparatif</a></li>
           <li><a href="green-it-impact.html">Démarche</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="favorites.html">Favoris</a></li>
         </ul>
       </nav>
     </div>
@@ -172,90 +200,25 @@
 
   <main>
     <h1>Événements à venir</h1>
-    <p style="text-align:center; font-size:0.9rem; color:#666;">Page 1 sur 1 – 8 événements affichés</p>
+    <p style="text-align:center; font-size:0.9rem; color:#666;">Chargement dynamique depuis <code>data.json</code></p>
 
-    <div class="filters">
-      <strong>Catégories :</strong>
-      <span>🎶 Musique</span>
-      <span>🎭 Théâtre</span>
-      <span>🖼️ Exposition</span>
-      <span>📚 Salon</span>
-      <span>🎬 Cinéma</span>
-      <span>📖 Littérature</span>
-      <span>🛍️ Marché</span>
-      <span>🌍 Conférence</span>
+    <div class="filters" id="category-filters">
+      <!-- Filtres injectés dynamiquement -->
     </div>
 
-<section class="event-grid">
-  <div class="event-card">
-    <img src="images/concert.webp" alt="Concert Plein Air">
-    <h3>Concert Plein Air</h3>
-    <p>25 juillet – Parc Floral</p>
-    <p>🎶 Musique</p>
-    <a href="evenement.html" class="event-link">En savoir plus</a>
-  </div>
+    <section class="event-grid" id="event-grid">
+      <!-- Les événements seront injectés ici -->
+    </section>
 
-  <div class="event-card">
-    <img src="images/spectacle.webp" alt="Soirée Théâtre">
-    <h3>Soirée Théâtre</h3>
-    <p>30 juillet – Théâtre du Nord</p>
-    <p>🎭 Théâtre</p>
-    <a href="evenement.html" class="event-link">En savoir plus</a>
-  </div>
-
-  <div class="event-card">
-    <img src="images/exposition.webp" alt="Exposition Sculptures">
-    <h3>Exposition Sculptures</h3>
-    <p>Jusqu’au 15 août – Musée Rodin</p>
-    <p>🖼️ Exposition</p>
-    <a href="evenement.html" class="event-link">En savoir plus</a>
-  </div>
-
-  <div class="event-card">
-    <img src="images/salon.webp" alt="Salon Étudiant">
-    <h3>Salon Étudiant</h3>
-    <p>7 septembre – Grande Halle</p>
-    <p>📚 Salon</p>
-    <a href="evenement.html" class="event-link">En savoir plus</a>
-  </div>
-
-  <div class="event-card">
-    <img src="images/diversite_logo.webp" alt="Festival Cinéma Vert">
-    <h3>Festival Cinéma Vert</h3>
-    <p>12 août – Cinéma Studio 28</p>
-    <p>🎬 Cinéma</p>
-    <a href="evenement.html" class="event-link">En savoir plus</a>
-  </div>
-
-  <div class="event-card">
-    <img src="images/smarthpone-user.webp" alt="Rencontre Auteurs">
-    <h3>Rencontre Auteurs</h3>
-    <p>19 août – Librairie des Champs</p>
-    <p>📖 Littérature</p>
-    <a href="evenement.html" class="event-link">En savoir plus</a>
-  </div>
-
-  <div class="event-card">
-    <img src="images/exposition - Copie.webp" alt="Marché Artisanal">
-    <h3>Marché Artisanal</h3>
-    <p>22 août – Place des Arts</p>
-    <p>🛍️ Marché</p>
-    <a href="evenement.html" class="event-link">En savoir plus</a>
-  </div>
-
-  <div class="event-card">
-    <img src="images/logo.ico" alt="Conférence Climat">
-    <h3>Conférence Climat</h3>
-    <p>3 septembre – Hôtel de Ville</p>
-    <p>🌍 Conférence</p>
-    <a href="evenement.html" class="event-link">En savoir plus</a>
-  </div>
-</section>
-
+    <div class="load-more-container">
+      <button id="load-more">Voir plus</button>
+    </div>
   </main>
 
   <footer>
     <p class="footer-note">Page optimisée selon les principes du Low Web. Images WebP, CSS intégré, aucune dépendance externe.</p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
