mis a jour avec vanilla js

--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
   <meta name="description" content="Accueil du projet IDEvent – démonstrateur web sobre (Low Web vs site classique)"/>
   <title>IDEvent – Accueil</title>
   <style>
+    :root {
+      --main-color: #27ae60;
+      --text-dark: #2c3e50;
+      --bg-light: #fdfdfd;
+      --bg-muted: #f4f4f4;
+    }
+
     body {
       font-family: system-ui, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #fdfdfd;
-      color: #2c3e50;
+      background-color: var(--bg-light);
+      color: var(--text-dark);
     }
 
     .green-banner {
@@ -22,8 +29,8 @@
       font-weight: bold;
     }
 
-    header.site-header {
-      background-color: #f4f4f4;
+    header {
+      background-color: var(--bg-muted);
       border-bottom: 1px solid #ddd;
       padding: 1rem 0;
     }
@@ -50,125 +57,187 @@
 
     nav ul {
       display: flex;
-      flex-wrap: wrap;
       gap: 1rem;
       list-style: none;
-      margin: 0;
       padding: 0;
+      margin: 0;
     }
 
     nav a {
       text-decoration: none;
-      color: #2c3e50;
+      color: var(--text-dark);
       font-weight: 600;
     }
 
     nav a:hover {
-      color: #27ae60;
+      color: var(--main-color);
     }
 
-    .home-content {
+    main {
       text-align: center;
-      padding: 3rem 1rem;
-      max-width: 800px;
-      margin: 0 auto;
+      padding: 2rem 1rem 1rem;
+      max-width: 1000px;
+      margin: auto;
     }
 
-    .home-content h1 {
-      font-size: 2.4rem;
+    h1 {
+      color: var(--main-color);
+      font-size: 2.2rem;
       margin-bottom: 0.5rem;
     }
 
-    .home-content h2 {
-      font-size: 1.5rem;
-      color: #555;
-      margin-bottom: 1.5rem;
-    }
-
-    .highlight-green {
-      color: #27ae60;
-      font-weight: bold;
-    }
-
-    .button,
-    .button-secondary {
-      display: inline-block;
-      margin: 1rem 0.5rem;
-      padding: 0.75rem 1.5rem;
-      font-size: 1rem;
-      font-weight: bold;
-      border-radius: 5px;
-      text-decoration: none;
-      border: 2px solid transparent;
-    }
-
-    .button {
-      background-color: #27ae60;
-      color: white;
-    }
-
-    .button:hover {
-      background-color: #219150;
-    }
-
-    .button-secondary {
-      background-color: transparent;
-      color: #27ae60;
-      border-color: #27ae60;
-    }
-
-    .button-secondary:hover {
-      background-color: #27ae60;
-      color: white;
-    }
-
-    footer.site-footer {
-      background-color: #f1f1f1;
-      padding: 2rem 1rem;
-      margin-top: 3rem;
-    }
-
-    .footer-container {
-      max-width: 1100px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
-
-    .footer-logo-info,
-    .footer-contact-details {
-      flex: 1 1 300px;
+    h2 {
+      font-size: 1.4rem;
       margin-bottom: 1rem;
     }
 
-    .footer-icon {
-      width: 18px;
-      margin-right: 8px;
-      vertical-align: middle;
+    .highlight-green {
+      color: var(--main-color);
+      font-weight: bold;
     }
 
-    .copyright {
+    .btn-link {
+      display: inline-block;
+      margin: 0.3rem;
+      padding: 0.5rem 1rem;
+      color: var(--main-color);
+      border: 1px solid var(--main-color);
+      border-radius: 4px;
+      text-decoration: none;
+      font-size: 0.9rem;
+    }
+
+    .btn-link:hover {
+      background-color: var(--main-color);
+      color: white;
+    }
+
+    section {
+      margin-top: 2rem;
+    }
+
+    .search-bar {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      gap: 1rem;
+      margin-top: 2rem;
+      padding: 1rem;
+      background-color: #f2fdf7;
+      border-radius: 8px;
+      box-shadow: 0 0 5px #ddd;
+    }
+
+    .search-bar input,
+    .search-bar select {
+      padding: 0.5rem;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      min-width: 220px;
+    }
+
+    .filters {
+      margin: 1.5rem 0;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 0.5rem;
+    }
+
+    .filters button {
+      padding: 0.4rem 0.8rem;
+      background-color: #e0f2e9;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-weight: bold;
+      color: #145a32;
+    }
+
+    .filters button.active {
+      background-color: var(--main-color);
+      color: white;
+    }
+
+    .event-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1.5rem;
+      padding: 1rem;
+    }
+
+    .event-card {
+      background: #fff;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding-bottom: 1rem;
+      text-align: center;
+    }
+
+    .event-card img {
+      width: 100%;
+      height: auto;
+      max-height: 180px;
+      object-fit: cover;
+      border-bottom: 1px solid #eee;
+    }
+
+    .event-card h3 {
+      font-size: 1.1rem;
+      margin: 0.8rem 0 0.3rem;
+    }
+
+    .event-card p {
+      font-size: 0.85rem;
+      margin: 0.2rem 1rem;
+      color: #555;
+    }
+
+    .event-link {
+      display: inline-block;
+      margin-top: 0.5rem;
+      color: var(--main-color);
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    .event-link:hover {
+      text-decoration: underline;
+    }
+
+    .load-more-container {
+      text-align: center;
+      margin: 1rem 0 3rem;
+    }
+
+    .load-more-container button {
+      padding: 0.6rem 1.2rem;
+      border-radius: 6px;
+      font-weight: bold;
+      border: none;
+      background-color: var(--main-color);
+      color: white;
+      cursor: pointer;
+    }
+
+    footer {
+      background-color: var(--bg-muted);
+      text-align: center;
+      padding: 1.5rem 1rem;
       font-size: 0.8rem;
-      margin-top: 10px;
+      color: #888;
     }
-
-    @media(max-width: 600px) {
-      .footer-container {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-      }
-    }
+    
   </style>
 </head>
 <body>
-
   <div class="green-banner">
     🌿 Ce site illustre les bonnes pratiques du web sobre (Green IT / Low Web) — efficacité, éco-conception, accessibilité.
   </div>
 
-  <header class="site-header">
+  <header>
     <div class="nav-container">
       <div class="logo">
         <img src="images/logo.ico" alt="Logo IDEvent" />
@@ -176,8 +245,7 @@
       </div>
       <nav aria-label="Navigation principale">
         <ul>
-          <li><a href="index.html">Accueil</a></li>
-          <li><a href="site-vitrine.html">Site vitrine</a></li>
+          <li><a href="#accueil">Accueil</a></li>
           <li><a href="comparatif.html">Comparatif</a></li>
           <li><a href="green-it-impact.html">Démarche</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -186,36 +254,45 @@
     </div>
   </header>
 
-  <main class="home-content">
+  <main>
     <h1>Bienvenue sur IDEvent</h1>
     <h2>Un démonstrateur de sobriété numérique et de performance</h2>
     <p>
-      Ce site présente un <span class="highlight-green">prototype éco-conçu</span> développé
-      dans le but de <strong>comparer</strong> un site événementiel classique avec une version <strong>Low Web</strong>,
-      plus sobre, plus rapide et plus respectueuse de l’environnement.
+      Ce site présente un <span class="highlight-green">prototype éco-conçu</span> développé dans le but de <strong>comparer</strong>
+      un site événementiel classique avec une version <strong>Low Web</strong>, plus sobre, plus rapide et plus respectueuse de l’environnement.
     </p>
-    <a href="site-vitrine.html" class="button">Voir le site vitrine</a>
-    <a href="comparatif.html" class="button-secondary">Voir les résultats comparatifs</a>
-    <a href="green-it-impact.html" class="button-secondary">Notre démarche</a>
+    <a href="#evenements" class="btn-link">Voir les événements</a>
+    <a href="comparatif.html" class="btn-link">Voir les résultats comparatifs</a>
+    <a href="green-it-impact.html" class="btn-link">Notre démarche</a>
+
+    <div class="search-bar">
+      <input type="text" id="searchBar" placeholder="Rechercher un événement..." />
+      <select id="citySelect">
+        <option value="">Ville</option>
+        <option value="paris">Paris</option>
+        <option value="lyon">Lyon</option>
+        <option value="marseille">Marseille</option>
+        <option value="lille">Lille</option>
+        <option value="nantes">Nantes</option>
+        <option value="bordeaux">Bordeaux</option>
+      </select>
+    </div>
+
+    <section id="evenements">
+      <h2 style="margin-top: 3rem;">Événements à venir</h2>
+      <p style="color: #777; font-size: 0.9rem;">Chargement dynamique depuis <code>data.json</code></p>
+      <div class="filters" id="category-filters"></div>
+      <div class="event-grid" id="event-grid"></div>
+      <div class="load-more-container">
+        <button id="load-more">Voir plus</button>
+      </div>
+    </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="footer-container">
-      <div class="footer-logo-info">
-        <div class="logo">
-          <img src="images/logo.ico" alt="Logo IDEvent" />
-          <span>IDEvent</span>
-        </div>
-        <p>Tous les événements en Île-de-France, au même endroit.</p>
-        <p class="copyright">© IDEvent - 2025</p>
-      </div>
-      <div class="footer-contact-details">
-        <p><img src="images/localisation_logo.webp" alt="Localisation" class="footer-icon" loading="lazy" /> 30 Avenue de la République, 94800 Villejuif</p>
-        <p><img src="images/mail_logo.webp" alt="Email" class="footer-icon" loading="lazy" /> <a href="mailto:business@idevent.com">business@idevent.com</a></p>
-        <p><img src="images/phone_logo.webp" alt="Téléphone" class="footer-icon" loading="lazy" /> <a href="tel:+33123456789">+33 01 23 45 67 89</a></p>
-      </div>
-    </div>
+  <footer>
+    Page optimisée selon les principes du Low Web. Images WebP, CSS intégré, aucune dépendance externe.
   </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
