clear code of audrey

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
                     <li><a href="qui-sommes-nous.html">Qui sommes nous ?</a></li>
                     <li><a href="notre-vision.html">Notre vision</a></li>
                     <li><a href="nos-engagements.html">Nos engagements</a></li>
-                    <li><a href="publication.html">Publication</a></li>
-                    <li><a href="contact.html">Nous contacter</a></li>
+                   
                 </ul>
             </nav>
         </div>
@@ -64,27 +63,17 @@
 </section>
 
 
-        <section class="more-info-contact" id="notre-vision">
-            <div class="container">
-                <h2>Vous voulez en savoir plus ?</h2>
-                <p>Si vous êtes intéressés en plus grand détail, n'hésitez pas à nous contacter ! Notre numéro sera listé ci-dessous :</p>
-                <p class="phone-number">+33 01 23 45 67 89</p>
-            </div>
-        </section>
 
         <section class="contact-form-section" id="contact">
             <div class="container">
-                <h2>Vous pouvez aussi nous envoyer un message au travers de la boîte messengère ci-contre.</h2>
+                <h2>Abonnez vous pour recevoir chaque semaine l'évènement et de spectacle directement dans votre boite mail ou message.</h2>
                 <form action="#" method="POST">
                     <div class="form-grid">
                         <div class="form-group">
                             <label for="nom_prenom">Votre nom et prénom...*</label>
                             <input type="text" id="nom_prenom" name="nom_prenom" required>
                         </div>
-                        <div class="form-group">
-                            <label for="entreprise">Votre entreprise...*</label>
-                            <input type="text" id="entreprise" name="entreprise" required>
-                        </div>
+                
                         <div class="form-group">
                             <label for="telephone">Votre numéro de téléphone...*</label>
                             <input type="tel" id="telephone" name="telephone" required>
@@ -92,14 +81,6 @@
                         <div class="form-group">
                             <label for="email">Votre messagerie électro...*</label>
                             <input type="email" id="email" name="email" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="pays">Votre pays...*</label>
-                            <input type="text" id="pays" name="pays" required>
-                        </div>
-                        <div class="form-group full-width">
-                            <label for="message">Votre message...*</label>
-                            <textarea id="message" name="message" rows="5" required></textarea>
                         </div>
                     </div>
                     <button type="submit" class="btn-submit">Envoyer</button>
