Ajout du formulaire de contact avec style et index

--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -19,10 +19,11 @@
             </a>
             <nav>
                 <ul>
+                    <li><a href="index.html">Accueil</a></li>
                     <li><a href="qui-sommes-nous.html" class="active">Qui sommes nous ?</a></li>
                     <li><a href="notre-vision.html">Notre vision</a></li>
-                    <li><a href="nos-engagements.html">Nos engagements</a></li>
-                
+                    
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
