--- a/nos-engagements.html
+++ b/nos-engagements.html
@@ -23,8 +23,8 @@
 <li><a href="index.html">Accueil</a></li>
 <li><a href="qui-sommes-nous.html">Qui sommes-nous ?</a></li>
 <li><a href="notre-vision.html">Notre vision</a></li>
-<li><a href="nos-engagements.html">Nos engagements</a></li>
 
+<li><a href="contact.html">Contact</a></li>
 
 </ul>
 </nav>
