Mise ajour de notre-vision

--- a/notre-vision.html
+++ b/notre-vision.html
@@ -33,11 +33,14 @@
         
     <section class="music-section">
     <div class="music-text">
-      <h1>EXPLOREZ L'ÎLE-DE-FRANCE</h1>
-      <h3>ET VIVEZ CHAQUE INSTANT</h3>
-      <p>Notre vision est de connecter chacun à la richesse culturelle et événementielle de l’Île-de-France,
-        tout en réduisant notre empreinte carbone grâce à un site éco-conçu. Moins d'énergie, plus d'impact
-        positif.</p>
+     <h1 class="fade-text">EXPLOREZ L'ÎLE-DE-FRANCE</h1>
+        <h3 class="fade-text delay-1">ET VIVEZ CHAQUE INSTANT</h3>
+        <p class="fade-text delay-2">
+          Notre vision est de connecter chacun à la richesse culturelle et événementielle de l’Île-de-France,
+          tout en réduisant notre empreinte carbone grâce à un site éco-conçu. Moins d'énergie, plus d'impact
+          positif.
+        </p>
+      </div>
     </div>
     <div class="music-image">
       <img src="images/woman-5275027_1280.webp" alt="Concert">
