--- a/notre-vision.html
+++ b/notre-vision.html
@@ -20,7 +20,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
-                    
+                    <li><a href="comparatif-ecoindex.html">Comparatif EcoIndex</a></li>
                     <li><a href="notre-vision.html" >Notre vision</a></li>
                     <li><a href="qui-sommes-nous.html">Qui sommes nous ?</a></li>
                     <li><a href="contact.html">Contact</a></li>
