--- a/index.html
+++ b/index.html
@@ -51,10 +51,26 @@
         }
 
         .hero {
-            background: linear-gradient(to bottom right, #4a90e2, #2c3e50);
+            background: url("images/bg-hero.webp") no-repeat center center / cover;
             color: white;
             padding: 6rem 1rem;
             text-align: center;
+            position: relative;
+        }
+
+        .hero::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.5);
+        }
+
+        .hero .hero-content {
+            position: relative;
+            z-index: 1;
         }
 
         .hero h1 {
